--- a/package.json
+++ b/package.json
@@ -906,6 +906,14 @@
       }
     },
     "menus": {
+      "editor/title": [
+        {
+          "when": "resourceLangId == go",
+          "command": "go.test.package",
+          "alt": "go.test.file",
+          "group": "navigation"
+        }
+      ],
       "editor/context": [
         {
           "when": "editorTextFocus && config.go.editorContextMenuCommands.toggleTestFile && resourceLangId == go",
